fix user and account design

--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -1,7 +1,8 @@
 {% include 'components/admin/base_admin.html.twig' %}
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
-{% block title %}show Dish{% endblock %}
+{% block title %}show Dish
+{% endblock %}
 
 {% block body %}
 	<h1>Dish</h1>
@@ -11,47 +12,44 @@
 				<div class="table-responsive table--no-card m-b-30">
 					<table class="table table-borderless table-striped table-earning">
 						<thead>
-						<tr>
-							<th>Id</th>
-							<th>Delivery Date</th>
-							<th>Dishes</th>
-							<th>Order Commentary</th>
-						</tr>
+							<tr>
+								<th>Id</th>
+								<th>Delivery Date</th>
+								<th>Dishes</th>
+								<th>Order Commentary</th>
+							</tr>
 						</thead>
 						<tbody>
-						<tr>
-							<td>{{ order.id }}</td>
-							<td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
-							<td>
-								<caption class="d-flex flex-column" style="margin-left: 10%;">
+							<tr>
+								<td>{{ order.id }}</td>
+								<td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
+								<td>
+
 									{% for orderDish in order.orderDishes %}
-										<p>
-											{{ orderDish.quantity }}
-											{{ orderDish.dish.name }}
-										</p>
+
+										{{ orderDish.quantity }}
+										{{ orderDish.dish.name }}
+										<p></p>
 									{% endfor %}
-								</caption>
-							</td>
-							{% if order.message is defined and order.message is null %}
-							<td>
-								<caption class="d-flex flex-column" style="margin-left: 10%;">
-									<p>message :
-										{{ order.commentary.message }}
-									</p>
-									<p>send the
-										{{ order.commentary.sendDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}
-									</p>
-									{% endif %}
-								</caption>
-							</td>
-						</tr>
+
+								</td>
+								{% if order.commentary is defined and order.commentary is not null %}
+									<td>
+	
+											<p>message :
+												{{ order.commentary.message }}
+											</p>
+											<p>send the
+												{{ order.commentary.sendDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}
+											</p>
+										{% endif %}
+									</td>
+						
+							</tr>
 						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-	<a class="btn btn-primary" href="{{ path('order_index') }}">back to list</a>
-	<a class="btn btn-primary" href="{{ path('order_edit', {'id': order.id}) }}">edit</a>
-{% endblock %}
-		{% include 'components/admin/footer_admin.html.twig' %}
+</div></div></div><a class="btn btn-primary" href="{{ path('order_index') }}">back to list</a><a class="btn btn-primary" href="{{ path('order_edit', {'id': order.id}) }}">edit</a>{% endblock %}{% include 'components/admin/footer_admin.html.twig' %}
