--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Ubereat -
+			{% block title %}Ubereat 
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
